Long/Integer deprecation cases