@@ -223,7 +223,7 @@ public class ApplyResourceImpl extends ACommonResourceImpl implements IApplyReso
         item.setConfigurationDraft(in.getConfiguration());
         item.setConfigurationDraftJson(null);
         item.setSchemaLocation(getSchemaLocation(in.getObjectType(), in.getSchemaIdentifier()));
-        item.setAuditLogId(new Long(0));// TODO
+        item.setAuditLogId(Long.valueOf(0));// TODO
         item.setAccount(getAccount());
         item.setCreated(new Date());
         item.setModified(item.getCreated());
