@@ -83,7 +83,7 @@ public class RenameResourceImpl extends ACommonResourceImpl implements IRenameRe
         item.setConfigurationDraft(null);
         item.setConfigurationDraftJson(null);
         item.setSchemaLocation(in.getSchemaIdentifier());
-        item.setAuditLogId(new Long(0));// TODO
+        item.setAuditLogId(Long.valueOf(0));// TODO
         item.setAccount(getAccount());
         item.setCreated(new Date());
         item.setModified(item.getCreated());
@@ -95,7 +95,7 @@ public class RenameResourceImpl extends ACommonResourceImpl implements IRenameRe
             throws Exception {
         item.setName(name);
         item.setSchemaLocation(in.getSchemaIdentifier());
-        // item.setAuditLogId(new Long(0));// TODO
+        // item.setAuditLogId(Long.valueOf(0));// TODO
         item.setAccount(getAccount());
         item.setModified(new Date());
         session.update(item);
